--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/app_bg"
     tools:context=".ui.main.home.HomeFragment">
 
    <RelativeLayout
@@ -21,7 +20,8 @@
           android:padding="8dp"
           android:layout_marginStart="8dp"
           android:layout_centerVertical="true"
-          android:src="@drawable/app_img"/>
+          android:src="@drawable/app_img"
+          tools:ignore="ContentDescription" />
 
       <TextView
           android:id="@+id/tv_app_name"
@@ -33,7 +33,8 @@
           android:textStyle="bold"
           android:layout_centerVertical="true"
           android:layout_marginStart="16dp"
-          android:text="@string/terms"/>
+          android:text="@string/terms"
+          tools:ignore="RelativeOverlap" />
 
       <ImageView
           android:id="@+id/img_selected"
@@ -43,7 +44,21 @@
           android:layout_centerVertical="true"
           android:padding="8dp"
           android:layout_marginEnd="4dp"
-          android:src="@drawable/ic_star" />
+          android:src="@drawable/ic_star"
+          tools:ignore="ContentDescription" />
+
+      <ImageView
+          android:id="@+id/img_add_terms"
+          android:layout_width="40dp"
+          android:layout_height="40dp"
+          android:layout_centerVertical="true"
+          android:clickable="true"
+          android:layout_toStartOf="@id/img_selected"
+          android:padding="8dp"
+          android:src="@drawable/ic_add"
+          app:tint="@color/white"
+          android:focusable="true"
+          tools:ignore="ContentDescription" />
    </RelativeLayout>
 
    <EditText
@@ -55,16 +70,19 @@
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/white"
-       android:drawableTint="@color/white"
        android:backgroundTint="@color/purple_500"
        android:layout_height="wrap_content"/>
 
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_terms"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_weight="1"
+       android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
+       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+       android:orientation="vertical"
        tools:listitem="@layout/term_item_rcv"/>
+
 
 </LinearLayout>
