--- a/app/src/main/res/layout/dialog_add_terms.xml
+++ b/app/src/main/res/layout/dialog_add_terms.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     app:cardCornerRadius="8dp"
@@ -14,7 +14,7 @@
 
         <EditText
             android:id="@+id/ed_name"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/purple_500"
             android:hint="@string/name"
@@ -27,7 +27,7 @@
 
         <EditText
             android:id="@+id/ed_desc"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/purple_500"
             android:hint="@string/description"
