--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -20,7 +20,7 @@
           android:padding="8dp"
           android:layout_marginStart="8dp"
           android:layout_centerVertical="true"
-          android:src="@drawable/app_img"
+          android:src="@drawable/navoiy"
           tools:ignore="ContentDescription" />
 
       <TextView
@@ -52,16 +52,17 @@
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:layout_centerVertical="true"
-          android:clickable="true"
           android:layout_toStartOf="@id/img_selected"
+          android:clickable="true"
+          android:focusable="true"
           android:padding="8dp"
           android:src="@drawable/ic_add"
           app:tint="@color/white"
-          android:focusable="true"
           tools:ignore="ContentDescription" />
    </RelativeLayout>
 
    <EditText
+       android:id="@+id/ed_search"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/search_for_terms"
@@ -69,7 +70,6 @@
        android:drawableEnd="@drawable/ic_search"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
-       android:textColorHint="@color/white"
        android:backgroundTint="@color/purple_500"
        android:layout_height="wrap_content"/>
 
