--- a/app/src/main/res/layout/saved_words_fragment.xml
+++ b/app/src/main/res/layout/saved_words_fragment.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@drawable/app_bg"
     tools:context=".ui.main.saved.SavedWordsFragment">
 
     <RelativeLayout
@@ -40,6 +40,8 @@
         android:layout_height="match_parent"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
         tools:listitem="@layout/term_item_rcv" />
 
 
