project has finished

--- a/app/src/main/res/layout/term_item_rcv.xml
+++ b/app/src/main/res/layout/term_item_rcv.xml
@@ -15,13 +15,15 @@
 
         <TextView
             android:id="@+id/tv_name_term"
-            android:layout_width="wrap_content"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/abandon"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <ImageView
@@ -39,7 +41,7 @@
             android:layout_height="40dp"
             android:layout_toStartOf="@id/img_terms_selectable"
             android:contentDescription="@string/todo"
-            android:padding="8dp"
+            android:padding="9dp"
             android:src="@drawable/ic_star"
             android:visibility="gone"
             app:tint="#454444" />
@@ -48,7 +50,7 @@
             android:id="@+id/line1"
             android:layout_width="250dp"
             android:layout_height="1dp"
-            android:layout_below="@id/img_terms_selectable"
+            android:layout_below="@id/tv_name_term"
             android:layout_marginStart="8dp"
             android:background="#3C3B3B"
             android:visibility="gone" />
